<resources>
    <string name="app_name">Cookbook app</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="cookbook">Cookbook</string>
    <string name="go_to_login">Go to login</string>
    <string name="title_activity_main_page">MainPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="reset_password">Reset Password</string>
    <string name="go_to_main_activity">Go to Main Activity</string>
    <string name="favourite">Favourite</string>
    <string name="add_recipe">Add recipe</string>
    <string name="my_recipe">My recipe</string>
    <string name="search_new_recipe">Search new recipe</string>
    <string name="title">Title</string>
    <string name="youtube_link">YouTube link</string>
    <string name="ingredients">ingredients</string>
    <string name="preparation">preparation</string>
    <string name="add_photo">Add photo</string>
    <string name="meat">Meat</string>
    <string name="vege">Vege</string>
    <string name="dessert">Dessert</string>
    <string name="drink">Drink</string>
    <string name="my_recipes">My recipes</string>
    <string name="type">type</string>
    <string name="grams_per_portion">grams per portion</string>
    <string name="_100">100</string>
    <string name="gram">gram</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="portion">portion</string>
    <string name="_1">1</string>
    <string name="views">Views:</string>
    <string name="edit">Edit</string>
    <string name="new_for_you">New for you</string>
    <string name="everything">Everything</string>
    <string name="edit_recipe">Edit recipe</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="points">Points:</string>
</resources>