<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    tools:context=".MainPage">

    <Button
        android:id="@+id/btn_favourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favourite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_add_new_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_recipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_favourite" />

    <Button
        android:id="@+id/btn_my_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_recipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_new_recipe" />

    <Button
        android:id="@+id/btn_search_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_new_recipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_my_recipe" />

</androidx.constraintlayout.widget.ConstraintLayout>