<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:fillViewport="true"
    tools:context=".AddRecipe">
        <LinearLayout
            android:padding="10sp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/add_recipe"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    android:hint="@string/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/youtube"
                    android:hint="@string/youtube_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/grams_per_portion"
                    android:inputType="numberDecimal"
                    android:hint="gram per portion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="match_parent"
                android:id="@+id/my_avatar_imageview"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"/>

            <Button
                android:id="@+id/btn_add_photo"
                android:text="@string/add_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ingredient"
                    android:hint="@string/ingredients"
                    android:layout_width="match_parent"
                    android:maxLines="8"
                    android:minLines="4"
                    android:scrollbars="vertical"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/preparation"
                    android:hint="@string/preparation"
                    android:layout_width="match_parent"
                    android:maxLines="8"
                    android:minLines="4"
                    android:scrollbars="vertical"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_add_new_recipe"
                android:text="@string/add_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_go_to_main_activity"
                android:text="@string/go_to_main_activity"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

</ScrollView>